--- a/assets/functions/og-facebook.html
+++ b/assets/functions/og-facebook.html
@@ -13,10 +13,10 @@
   <meta property="og:type" content="article"/>
   <meta property="og:image" content="<?php echo $theSrc; ?>" />
   <meta property="og:url" content="<?php the_permalink() ?>" />
-  <meta property="og:description" content="<?php the_excerpt() ?>" />
+  <meta property="og:description" content="<?php echo get_the_excerpt() ?>" />
 <?php } else { ?>
   <meta property="og:title" content="<?php bloginfo('name'); ?>"/>
   <meta property="og:image" content="<?php echo $theSrc; ?>" />
   <meta property="og:url" content="<?php bloginfo('url'); ?>" />
-  <meta property="og:description" content="<?php the_excerpt() ?>" />
+  <meta property="og:description" content="<?php echo get_the_excerpt() ?>" />
 <?php } ?>
